[package]
name = "example-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
